# papaya

./: .gitignore  README.md  analyze_failure.py  cli.py  collectors_api.py  custom_collector.py  demo.py  digest.txt  discord_utils.py  external_metrics_collector.py  github_utils.py  introduction.mdx  main.py  monitor.py  postgres_utils.py  pyproject.toml  run_tests.sh  setup.py  sparkmeasure_collector.py  test_collectors.py
.github/workflows/: main.yml  ruff.yml  test.yaml
app/: .env.example  README.md
app/backend/: .env.example  auth.py  main.py  pyproject.toml  security.py
app/frontend/: README.md  ingest.sh  next.config.ts  package-lock.json  package.json
collectors/: base_collector.py  collectors.md  collectors_api.py  custom_app_metrics_collector.py  custom_collector.py  httpendpoints_collector.py  os_metrics_collector.py
datafruit/: __init__.py  cli.py  database.py  datafruit.py  dbs.py  diff.py  diff_printing.py  dummy_models.py  sql_job.py
datafruit/deprecated/: datafruit.py
datafruit/job/: parallelized_job.py  pyjob.py
datafruit/model/: sql_model.py
docs/: developer_roadmap.mdx  docs.json  index.mdx  quickstart.mdx
docs/essentials/: code.mdx
examples/: trivial.py
mcp/: main.py  pyproject.toml
papaya/: __init__.py  analyze_failure.py  cli.py  code_repair.py  discord_utils.py  main.py  monitor.py  run_papaya.py
plugin/: README.md  build.sbt  docs.md
spark_skew_demo/: execute_spark_job.py  run_demo.sh
sparklistener/: faulty_app.py  instructions.txt  spark_monitor_api.py
temp/: dft.py
tests/: test_datafruit.py  test_sql_job.py
(+21 files in other folders)
