[project]
name = "spark-debugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord.py>=2.3.2",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.14.0",
    "pygithub>=2.6.1",
    "pyspark>=3.5.5",
    "python-dotenv>=1.0.0",
]
